Minor fix: project title was half-hidden behind navigation menu

--- a/css/style.css
+++ b/css/style.css
@@ -1550,6 +1550,7 @@ hr {
 }
 .project__title {
   animation: title-slidein 1s 1.3s backwards;
+  z-index: 1;
 }
 .project__title .projects__link {
   color: #0084ae;
